css and database

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,38 @@
-form.signup,
-form.login {
-  margin-top: 50px;
+body{
+  background-color: aquamarine;
+  font-family: 'Gochi Hand', cursive
+
 }
+
+.btn{
+  
+  width: 100%;
+}
+
+
+.email,
+.password{
+
+  color: beige;
+
+}
+
+
+.signup,
+.login {
+  padding: 20px;
+  margin-top: 50px;
+  background-color: blueviolet;
+  
+  
+}
+
+header {
+  
+  background-color: cyan;
+  text-align: center;
+  
+}
+
+
+
