--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,7 @@
 </nav>
 
 <div class="container">
-    <img src="../assets/HomePage.jpg" width="700px">
+    <img src="../public/assets/HomePage.jpg" width="700px">
     <br>
 
     <form class="login">
