placed signup imgs next to each other

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -20,10 +20,10 @@
                 {{!-- Choose Character/Avatar --}}
                 <p>Choose a Sidekick:</p>
                 <div class="row">
-                    <div class="column pet1">
+                    <div class="col-md-6 pet1">
                         <img src="../public/assets/Cat-Neutral.png" alt="Cat" width="250px">
                     </div>
-                    <div class="column pet2">
+                    <div class="col-md-6 pet2">
                         <img src="../public/assets/Dog-Neutral.png" alt="Dog" width="250px">
                     </div>
                 </div>
