--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,24 +4,39 @@
     </h1>
 </nav>
 
-<div class="container">
+<div class="container homePage">
     <img src="../assets/HomePage.jpg" width="700px">
     <br>
 
     <form class="login">
-        <input type="email" class="form-control" id="email-input" placeholder="Email">
+      <div class="row">
+          <div class="col-md-5">
+            <input type="email" class="form-control" id="email-input" placeholder="Email">
+          </div>
 
-        <input type="password" class="form-control" id="password-input" placeholder="Password">
+          <div class="col-md-5">
+              <input type="password" class="form-control" id="password-input" placeholder="Password">
+          </div>
 
-        <button type="submit" class="btn">Login</button>
+          <div class="col-md-2">
+              <button type="submit" class="btn">Login</button>
+          </div>
+
+      </div>
+
+      <div class="row">
+        <p>
+            <a href="/signup">Or Create an Account</a>
+        </p>
+      </div>
     </form>
 
-    <p>
-        <a href="#">Or Create an Account</a>
-    </p>
 
 </div>
 
 <footer class="footer">
     Contributors and Credits: <a href="#">Links here</a> || <a href="#">Links here</a> || <a href="#">Links here</a> || <a href="#">Links here</a> || <a href="#">Links here</a>
 </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/login.js"></script>
