getting handlebars to work on hompage

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,10 @@
 <nav class="navbar">
-    <h1>
+    <h1 class="header">
         Self-Care Sidekick
     </h1>
 </nav>
+
+<p></p>
 
 <div class="container homePage">
     <img src="../assets/HomePage.jpg" width="700px">
@@ -24,15 +26,16 @@
 
       </div>
 
-      <div class="row">
-        <p>
-            <a href="/signup">Or Create an Account</a>
-        </p>
+      <div class="row homePage">
+            <div class="col-md-12">
+                <a href="/signup">Or Create an Account</a>
+            </div>
+ 
       </div>
     </form>
-
-
 </div>
+
+<p></p>
 
 <footer class="footer">
     Contributors and Credits: <a href="#">Links here</a> || <a href="#">Links here</a> || <a href="#">Links here</a> || <a href="#">Links here</a> || <a href="#">Links here</a>
