--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,13 @@
 
 body{
-  background-color: aquamarine;
+  background-color: #feeeca;
   font-family: 'Gochi Hand', cursive
 
 }
 
 .btn{
-  
+  background-color: #ad591d;
+  color: 		#773d15;
   width: 100%;
 }
 
@@ -18,28 +19,11 @@ body{
 
 }
 
-
 .signup,
 .login {
-  padding: 20px;
-  margin-top: 50px;
-  background-color: blueviolet;
-  
-  
-}
-
-header {
-  
-  background-color: cyan;
-  text-align: center;
-  
-}
-
-
-
-form.signup,
-form.login {
-  margin-top: 20px;
+  padding: 10px;
+  margin-top: 10px;
+  background-color: 	#2c3c54;
 }
 
 .navbar {
@@ -52,5 +36,10 @@ h1 {
 }
 
 .homePage {
+  text-align: center;
+}
+
+.footer {
+  background-color: #f4ac84;
   text-align: center;
 }
