--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="../../public/stylesheets/style.css" type="text/css" />
+		<link rel="stylesheet" href="../../stylesheets/style.css" type="text/css" />
 		<title>Self-Care Sidekick</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="../../public/js/login.js"></script>
-        <script src="../../public/js/members.js"></script>
-		<script src="../../public/js/signup.js"></script>
+		<script src="../../js/login.js"></script>
+        <script src="../../js/members.js"></script>
+		<script src="../../js/signup.js"></script>
 
 	</head>
 	<body>
