--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -21,10 +21,10 @@
                 <p>Choose a Sidekick:</p>
                 <div class="row">
                     <div class="col-md-6 pet1">
-                        <img src="../public/assets/Cat-Neutral.png" alt="Cat" width="250px">
+                        <img src="../assets/Cat-Neutral.png" alt="Cat" width="250px">
                     </div>
                     <div class="col-md-6 pet2">
-                        <img src="../public/assets/Dog-Neutral.png" alt="Dog" width="250px">
+                        <img src="../assets/Dog-Neutral.png" alt="Dog" width="250px">
                     </div>
                 </div>
                 <div class="form-group">
