--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -12,6 +12,7 @@
 
         <div class="row">
             <div class="col-md-4">
+                {{!-- might need to do an empty div here for the sidekick image, and do an if/else in script that displays correct icon --}}
                 {{sidekickImage}}
                 <p>
                     {{> status}}
