--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -42,7 +42,7 @@
             </form>
 
             <br>
-            <p>Already a friend? Login <a href="/views/home.handlebars">here</a>.</p>
+            <p>Already a friend? Login <a href="/">here</a>.</p>
         </div>
     </div>
 </div>
@@ -100,6 +100,7 @@ if dog clicked, set value and add after submit --}}
             emailInput.val("");
             passwordInput.val("");
             sidekick.val("");
+            alert("Welcome " + sidekickData.name + ". Please log in to continue.")
         });
 
 
