--- a/views/partials/sleep-wake.handlebars
+++ b/views/partials/sleep-wake.handlebars
@@ -1,3 +1,3 @@
-	<button class="change-sleep" data-id="{{id}}" data-newsleep="{{sleep}}">
+	<button class="change-sleep btn" data-id="{{id}}" data-newsleep="{{sleep}}">
 		{{#if sleep}}Wake Up{{else}}Sleep{{/if}}
 	</button>
