--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -6,9 +6,7 @@
 
 <div class="card">
   <div class="card-body">
-        <p>
-            {{Sidekicks.sidekickName}}
-        </p>
+        <p class="sidekickName"></p>
 
         <div class="row">
             <div class="col-md-4">
@@ -40,32 +38,4 @@
   </div>
 </div>
 
-<script>
-    function updateImg {
-        if (Sidekicks.type === "dog") {
-            if (Sidekicks.happinessPoints < 30) {
-                $(".imgDiv").empty();
-                $(".imgDiv").html("<img src='assets/Dog-Alert.png'>");
-            } else if (Sidekicks.happinessPoints > 60) {
-                $(".imgDiv").empty();
-                $(".imgDiv").html("<img src='assets/Dog-Happy.png'>");
-            } else {
-                $(".imgDiv").empty();
-                $(".imgDiv").html("<img src='assets/Dog-Neutral.png'>");
-            }
-        } else if (Sidekicks.type === "cat") {
-            if (Sidekicks.happinessPoints < 30) {
-                $(".imgDiv").empty();
-                $(".imgDiv").html("<img src='assets/Cat-Alert.png'>");
-            } else if (Sidekicks.happinessPoints > 60) {
-                $(".imgDiv").empty();
-                $(".imgDiv").html("<img src='assets/Cat-Happy.png'>");
-            } else {
-                $(".imgDiv").empty();
-                $(".imgDiv").html("<img src='assets/Cat-Neutral.png'>");
-            }
-        }
-    }
-
-    updateImg();
-</script>
+<script src="/js/members.js"></script>
