added ajax functions to add-activity-modal.handlebars file

--- a/views/partials/activity-block.handlebars
+++ b/views/partials/activity-block.handlebars
@@ -8,3 +8,10 @@
 	<button data-update="{{id}}" data-category="{{category}}" class="update-activity">Update</button>
     <button data-delete="{{id}}" class="delete-activity">Delete</button>
 </li>
+
+<script>
+    $(document).ready(function () {
+        
+        
+    });
+</script>
