--- a/views/add-activity-modal.handlebars
+++ b/views/add-activity-modal.handlebars
@@ -14,14 +14,47 @@
         <label for="difficulty">Difficulty</label>
         <br>
         <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-            <label class="form-check-label" for="1point">1 Point</label>
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-            <label class="form-check-label" for="3points">3 Points</label>
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-            <label class="form-check-label" for="5points">5 Points</label>
+            <input class="form-check-input" type="radio" name="inlineCheckbox" id="inlineRadio2" value="1">
+            <label class="form-check-label" for="inlineCheckbox">1 Point</label>
+            <input class="form-check-input" type="radio" name="inlineCheckbox" id="inlineRadio2" value="3">
+            <label class="form-check-label" for="inlineCheckbox">3 Points</label>
+            <input class="form-check-input" type="radio" name="inlineCheckbox" id="inlineRadio2" value="5">
+            <label class="form-check-label" for="inlineCheckbox">5 Points</label>
         </div>
         <br>
         <button type="submit" class="btn btn-default">Save New Task</button>
     </form>
 </div>
+
+<script>
+    $(document).ready(function () {
+
+        let activities = [];
+        let category = $("#selectCategory option:selected").text();
+        let difficulty = $(".form-check-input:checked").val();
+        const activityname = $("#addActivity");
+
+        $("#savenewtask").on("click", function () {
+            const activityData = {
+                activityName: activityname.val().trim(),
+                priority: difficulty,
+                category: category
+            }
+
+            createActivity(activityData.activityName, activityData.priority, activityData.category, activityData)
+        });
+
+        function createActivity(activityName, priority, category, activityData){
+            $.post("/api/activity", {
+                activityName: activityName,
+                priority: priority,
+                category: category
+            }).then(function () {
+                console.log("new activity added: " + activityData);
+            });
+        }
+
+    })
+</script>
+
+{{!-- if task completed then += happiness points --}}
