updated add-activity-modal.handlebars, homepage.js, and members.handlebars

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -20,7 +20,7 @@
 
                 {{!-- buttons to bring up modals --}}
                 <p>
-                    <button class="btn">Add Task</button>
+                    <button class="btn addtask">Add Task</button>
                     <br>
                     <button class="btn">See History</button>
                     <br>
@@ -39,3 +39,4 @@
 </div>
 
 <script src="/js/members.js"></script>
+<script src="/js/homepage.js"></script>
