--- a/views/add-activity-modal.handlebars
+++ b/views/add-activity-modal.handlebars
@@ -1,29 +1,31 @@
-<div id="addActivityModal" class="modal">
-    <form>
-        <label for="add-activity-form">Add New Activity</label>
-        <input type="text" class="form-control" id="addActivity" placeholder="Activity Name">
-        <br>
-        <label for="FormSelect1">Select Category</label>
-        <select class="form-control" id="selectCategory">
-            <option>Personal Grooming</option>
-            <option>Food</option>
-            <option>Exercise</option>
-            <option>Cleaning</option>
-        </select>
-        <br>
-        <label for="difficulty">Difficulty</label>
-        <br>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineCheckbox" id="inlineRadio2" value="1">
-            <label class="form-check-label" for="inlineCheckbox">1 Point</label>
-            <input class="form-check-input" type="radio" name="inlineCheckbox" id="inlineRadio2" value="3">
-            <label class="form-check-label" for="inlineCheckbox">3 Points</label>
-            <input class="form-check-input" type="radio" name="inlineCheckbox" id="inlineRadio2" value="5">
-            <label class="form-check-label" for="inlineCheckbox">5 Points</label>
-        </div>
-        <br>
-        <button type="submit" class="btn btn-default">Save New Task</button>
-    </form>
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-body">
+        <form>
+            <label for="add-activity-form">Add New Activity</label>
+            <input type="text" class="form-control" id="addActivity" placeholder="Activity Name">
+            <br>
+            <label for="FormSelect1">Select Category</label>
+            <select class="form-control" id="selectCategory">
+                <option>Personal Grooming</option>
+                <option>Food</option>
+                <option>Exercise</option>
+                <option>Cleaning</option>
+            </select>
+            <br>
+            <label for="difficulty">Difficulty</label>
+            <br>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineCheckbox" id="inlineRadio2" value="1">
+                <label class="form-check-label" for="inlineCheckbox">1 Point</label>
+                <input class="form-check-input" type="radio" name="inlineCheckbox" id="inlineRadio2" value="3">
+                <label class="form-check-label" for="inlineCheckbox">3 Points</label>
+                <input class="form-check-input" type="radio" name="inlineCheckbox" id="inlineRadio2" value="5">
+                <label class="form-check-label" for="inlineCheckbox">5 Points</label>
+            </div>
+            <br>
+            <button type="submit" class="btn btn-default">Save New Task</button>
+        </form>
+    </div>
 </div>
 
 <script>
@@ -45,10 +47,8 @@
         });
 
         function createActivity(activityName, priority, category, activityData){
-            $.post("/api/activity", {
-                activityName: activityName,
-                priority: priority,
-                category: category
+            $.post("/api/activity", function(data){
+                alert("success");
             }).then(function () {
                 console.log("new activity added: " + activityData);
             });
