--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,3 +61,13 @@ h1 {
 [type=radio]:checked + img {
   outline: 2px solid #f4ac84;
 }
+
+.modal-body {
+  background-color: #ffffff;
+}
+
+.form-check-input {
+  height: 20px;
+  width: 20px;
+  opacity: 1;
+}
