--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="col-md-6 choose-cat form-check">
                         <label>
-                        <input class = "form-check-input" type = "radio" name = "Choice" id = "catChoiceId" value = "/assets/Cat-Neutral.png">
+                        <input class = "form-check-input" type = "radio" name = "Choice" id = "catChoiceId" value = "cat">
                         <img src="/assets/Cat-Neutral.png" alt="Cat" width="250px" id="cat"
                             data-catdog="{{sidekickImage}}">
                         </label>
@@ -30,7 +30,7 @@
 
                     <div class="col-md-6 choose-dog form-check">
                         <label>
-                       <input class = "form-check-input" type = "radio" name = "Choice" id = "dogChoiceId" value = "/assets/Dog-Neutral.png">
+                       <input class = "form-check-input" type = "radio" name = "Choice" id = "dogChoiceId" value = "dog">
                            <img src="/assets/Dog-Neutral.png" alt="Dog" width="250px" id="dog"
                             data-catdog="{{sidekickImage}}">
                         </label>
