--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,16 @@ body{
   background-color: #440a31;
 }
 
+.navbar-brand {
+  margin-left: 75%;
+  color: white;
+}
+
+.navbar-brand:hover {
+  color: #f4ac84;
+}
+
+
 h1 {
   color: white;
   text-align: center;
