fixing code and adding progressBar code

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -62,11 +62,11 @@
             <label for="difficulty">Difficulty</label>
             <br>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" style="opacity: 1" type="radio" name="inlineCheckbox" id="inlineRadio1" value="1">
+                <input class="form-check-input activity-check" style="opacity: 1" type="radio" name="inlineCheckbox" id="inlineRadio1" value="1">
                 <label class="form-check-label" for="inlineCheckbox">1 Point</label>
-                <input class="form-check-input" style="opacity: 1" type="radio" name="inlineCheckbox" id="inlineRadio3" value="3">
+                <input class="form-check-input activity-check" style="opacity: 1" type="radio" name="inlineCheckbox" id="inlineRadio3" value="3">
                 <label class="form-check-label" for="inlineCheckbox">3 Points</label>
-                <input class="form-check-input" style="opacity: 1" type="radio" name="inlineCheckbox" id="inlineRadio5" value="5">
+                <input class="form-check-input activity-check" style="opacity: 1" type="radio" name="inlineCheckbox" id="inlineRadio5" value="5">
                 <label class="form-check-label" for="inlineCheckbox">5 Points</label>
             </div>
             <br>
