--- a/views/add-activity-modal.handlebars
+++ b/views/add-activity-modal.handlebars
@@ -15,11 +15,11 @@
             <label for="difficulty">Difficulty</label>
             <br>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineCheckbox" id="inlineRadio2" value="1">
+                <input class="form-check-input activity-check" type="radio" name="inlineCheckbox" id="inlineRadio2" value="1">
                 <label class="form-check-label" for="inlineCheckbox">1 Point</label>
-                <input class="form-check-input" type="radio" name="inlineCheckbox" id="inlineRadio2" value="3">
+                <input class="form-check-input activity-check" type="radio" name="inlineCheckbox" id="inlineRadio2" value="3">
                 <label class="form-check-label" for="inlineCheckbox">3 Points</label>
-                <input class="form-check-input" type="radio" name="inlineCheckbox" id="inlineRadio2" value="5">
+                <input class="form-check-input activity-check" type="radio" name="inlineCheckbox" id="inlineRadio2" value="5">
                 <label class="form-check-label" for="inlineCheckbox">5 Points</label>
             </div>
             <br>
