--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -22,7 +22,8 @@
                 <p>
                     {{> status}}
                 </p>
-
+                
+                {{> graph}}
                 {{!-- buttons to bring up modals --}}
                 <p>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
