--- a/views/partials/status.handlebars
+++ b/views/partials/status.handlebars
@@ -1,1 +1,1 @@
-<progress value="{{sidekick.happinessPoints}}" max ="100">
+<progress class="progressBar" value="{{sidekick.happinessPoints}}" max ="100">
