--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -63,7 +63,7 @@
 <p></p>
 
 <footer class="footer">
-    Contributors and Credits: <a href="#">Links here</a> || <a href="#">Links here</a> || <a href="#">Links here</a> || <a href="#">Links here</a> || <a href="#">Links here</a>
+    Contributors and Credits: <a href="https://github.com/AnnaxGrace" target="_blank">Anna</a> || <a href="https://github.com/sharlenemay" target="_blank">Sharlene</a> || <a href="https://github.com/tiiedye" target="_blank">Jace</a> || <a href="https://github.com/returntrip444" target="_blank">Daniel</a> || Images sourced from: <a href="https://www.freevector.com/" target="_blank">FreeVector</a>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
