--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -9,11 +9,11 @@
     
 </nav>
 
-<div class="card">
+<div class="card container card-bg">
   <div class="card-body">
         <p class="sidekickName"></p>
 
-        <div class="row">
+        <div class="row divContent">
             <div class="col-md-4">
                 {{!-- imgDiv to hold sidekick img --}}
                 <div class="imgDiv"></div>
@@ -49,6 +49,10 @@
         </div>
   </div>
 </div>
+
+<footer class="footer">
+    Contributors and Credits: <a href="https://github.com/AnnaxGrace" target="_blank">Anna</a> || <a href="https://github.com/sharlenemay" target="_blank">Sharlene</a> || <a href="https://github.com/tiiedye" target="_blank">Jace</a> || <a href="https://github.com/returntrip444" target="_blank">Daniel</a> || Images sourced from: <a href="https://www.freevector.com/" target="_blank">FreeVector</a>
+</footer>
 
 {{!-- {{> add-activity-modal}} --}}
 
