--- a/views/partials/graph.handlebars
+++ b/views/partials/graph.handlebars
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+{{!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"
 
         integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT"
 
@@ -40,7 +40,7 @@
 
 <script src="members.js"></script>
 
-<script src="scale.js"></script>
+<script src="scale.js"></script> --}}
 
 
 
