--- a/views/add-activity-modal.handlebars
+++ b/views/add-activity-modal.handlebars
@@ -6,55 +6,39 @@
             <br>
             <label for="FormSelect1">Select Category</label>
             <select class="form-control" id="selectCategory">
-                <option value="grooming">Personal Grooming</option>
-                <option value="food">Food</option>
-                <option value="exercise">Exercise</option>
-                <option value="cleaning">Cleaning</option>
+                <option>Personal Grooming</option>
+                <option>Food</option>
+                <option>Exercise</option>
+                <option>Cleaning</option>
             </select>
             <br>
             <label for="difficulty">Difficulty</label>
             <br>
             <div class="form-check form-check-inline">
-                <input class="form-check-input activity-check" type="radio" name="inlineCheckbox" id="inlineRadio2" value="1">
+                <input class="form-check-input activity-check" type="radio" name="inlineCheckbox"
+                    id="inlineRadio1" value="1">
                 <label class="form-check-label" for="inlineCheckbox">1 Point</label>
-                <input class="form-check-input activity-check" type="radio" name="inlineCheckbox" id="inlineRadio2" value="3">
+                <input class="form-check-input activity-check" type="radio" name="inlineCheckbox"
+                    id="inlineRadio3" value="3">
                 <label class="form-check-label" for="inlineCheckbox">3 Points</label>
-                <input class="form-check-input activity-check" type="radio" name="inlineCheckbox" id="inlineRadio2" value="5">
+                <input class="form-check-input activity-check" type="radio" name="inlineCheckbox"
+                    id="inlineRadio5" value="5">
                 <label class="form-check-label" for="inlineCheckbox">5 Points</label>
             </div>
             <br>
-            <button type="submit" class="btn btn-default">Save New Task</button>
+            <button type="submit" class="btn btn-default" id="savenewtask">Save New Task</button>
         </form>
     </div>
 </div>
 
-<script>
-    $(document).ready(function () {
-
-        let activities = [];
-        let category = $("#selectCategory :selected").val();
-        let difficulty = $(".form-check-input:checked").val();
-        const activityname = $("#addActivity");
-
-        $("#savenewtask").on("click", function () {
-            const activityData = {
-                activityName: activityname.val().trim(),
-                priority: difficulty,
-                category: category
-            }
-
-            createActivity(activityData.activityName, activityData.priority, activityData.category, activityData)
-        });
-
-        function createActivity(activityName, priority, category, activityData){
-            $.post("/api/activity", function(data){
-                alert("success");
-            }).then(function () {
-                console.log("new activity added: " + activityData);
-            });
-        }
-
-    })
-</script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+<script src="/js/members.js"></script>
 
 {{!-- if task completed then += happiness points --}}
