Added invite modal and all buttons work - now just need to add code to them

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -51,7 +51,13 @@
 </div>
 
 <footer class="footer">
+    <p id = "nodemailer">
+        Think a friend could benefit from having a sidekick? <a href="" data-toggle="modal" data-target="#inviteModal">Invite them!</a>
+    </p>
+    {{> invite}}
+    <p>
     Contributors and Credits: <a href="https://github.com/AnnaxGrace" target="_blank">Anna</a> || <a href="https://github.com/sharlenemay" target="_blank">Sharlene</a> || <a href="https://github.com/tiiedye" target="_blank">Jace</a> || <a href="https://github.com/returntrip444" target="_blank">Daniel</a> || Images sourced from: <a href="https://www.freevector.com/" target="_blank">FreeVector</a>
+    </p>
 </footer>
 
 {{!-- {{> add-activity-modal}} --}}
