--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -11,7 +11,7 @@
 
 <div class="card container card-bg">
   <div class="card-body">
-        <p class="sidekickName"></p>
+        <h3 class="sidekickName"></h3>
 
         <div class="row divContent">
             <div class="col-md-4">
@@ -39,7 +39,7 @@
             {{!-- Div to hold added activities --}}
             <div class="col-md-8">
                 Test Task
-                    <button class="complete" data-id="{{id}}" data-category="{{category}}" value="50">Complete</button>
+                    <button class="complete" data-id="{{id}}" data-category="{{category}}" data-value="50">Complete</button>
 	                <button data-updatetask="{{id}}" data-category="{{category}}" class="update-activity">Update</button>
                     <button data-deletetask="{{id}}" class="delete-activity">Delete</button>
                 {{#each Activity}}
